<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ekran2">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="24dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/create_an_a"
            android:layout_width="196dp"
            android:layout_height="30dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="2sp"
            android:text="@string/create_an_a"
            android:textAppearance="@style/create_an_a"
            android:translationY="-0.94sp"
            />
        <TextView
            android:id="@+id/complete_th"
            android:layout_width="275dp"
            android:layout_height="16dp"
            android:gravity="left"
            android:lineSpacingExtra="0sp"
            android:layout_marginTop="8dp"
            android:text="@string/complete_th"
            android:textAlignment="textStart"
            android:textAppearance="@style/complete_th"
            tools:ignore="RtlCompat,RtlHardcoded" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lablename"
                android:layout_width="62dp"
                android:layout_height="16dp"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="0sp"
                android:text="@string/lablename"
                android:textAppearance="@style/complete_th" />
            <EditText
                android:id="@+id/editTextText"
                android:layout_marginTop="8dp"
                android:layout_width="342dp"
                android:layout_height="44dp"
                android:background="@drawable/edit_hint"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:hint="@string/hint1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lablename2"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="0sp"
                android:text="@string/lablename2"
                android:textAppearance="@style/complete_th" />
            <EditText
                android:id="@+id/editTextText2"
                android:layout_marginTop="8dp"
                android:layout_width="342dp"
                android:layout_height="44dp"
                android:background="@drawable/edit_hint"
                android:ems="10"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:hint="@string/hint2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lablename3"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="0sp"
                android:text="@string/lablename3"
                android:textAppearance="@style/complete_th" />
            <EditText
                android:id="@+id/editTextText3"
                android:layout_marginTop="8dp"
                android:layout_width="342dp"
                android:layout_height="44dp"
                android:background="@drawable/edit_hint"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:hint="@string/hint3"/>
        </LinearLayout>

        <TextView
            android:id="@+id/lablename4"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:gravity="center_horizontal|top"
            android:layout_marginTop="15dp"
            android:lineSpacingExtra="0sp"
            android:text="@string/lablename4"
            android:textAppearance="@style/complete_th" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="342dp"
                android:layout_height="44dp"
                android:background="@drawable/edit_hint"
                android:ems="10"
                android:hint="@string/hint4"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="29dp"
                android:layout_height="27dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextText4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.947"
                app:layout_constraintStart_toStartOf="@+id/editTextText4"
                app:layout_constraintTop_toTopOf="@+id/editTextText4"
                app:layout_constraintVertical_bias="0.529"
                android:background=""
                app:srcCompat="@drawable/img_2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/lablename5"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:gravity="center_horizontal|top"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="0sp"
            android:text="@string/lablename5"
            android:textAppearance="@style/complete_th" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="342dp"
                android:layout_height="44dp"
                android:background="@drawable/edit_hint"
                android:ems="10"
                android:hint="@string/hint5"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="29dp"
                android:layout_height="27dp"
                android:background=""
                app:layout_constraintBottom_toBottomOf="@+id/editTextText5"
                app:layout_constraintEnd_toEndOf="@+id/editTextText5"
                app:layout_constraintHorizontal_bias="0.948"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextText5"
                app:layout_constraintVertical_bias="0.529"
                app:srcCompat="@drawable/img_2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:orientation="horizontal">
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/checkbox"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:clipToOutline="true"
                android:background="@drawable/checkbox"
                />
            <TextView
                android:id="@+id/by_ticking_"
                android:layout_width="271dp"
                android:layout_height="32dp"
                android:text="@string/by_ticking_"
                android:textAppearance="@style/by_ticking_"
                android:lineSpacingExtra="2sp"
                android:translationY="-0.97sp"
                android:gravity="center_horizontal|top"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="64dp">
            <Button
                android:id="@+id/button"
                android:layout_width="343dp"
                android:layout_height="46dp"
                android:backgroundTint="#A7A7A7"
                android:text="Sign Up"
                app:cornerRadius="4dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/already_hav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_hav"
                    android:textAppearance="@style/already_hav"
                    android:lineSpacingExtra="0sp"
                    android:layout_marginLeft="69.5dp"
                    android:layout_marginRight="1dp"
                    android:gravity="right"
                    />
                <TextView
                    android:id="@+id/sign_in"
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/sign_in"
                    android:lineSpacingExtra="0sp"
                    android:gravity="left"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="122dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/or_sign_in_"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:text="@string/or_sign_in_"
                    android:textAppearance="@style/or_sign_in_"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center"
                    />
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="16dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/img_1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>