<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main" android:layout_width="match_parent" android:orientation="vertical" android:layout_height="match_parent" tools:context=".MainActivity">
    <ImageView android:id="@+id/imageView"
        android:layout_width="399.94dp"
        android:layout_height="298dp"
        android:layout_marginTop="105dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/img"/>
    <LinearLayout android:layout_width="311dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="63dp"
        android:orientation="vertical">
        <TextView android:id="@+id/real_time_t"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:layout_gravity="center"
            android:lineSpacingExtra="-4sp"
            android:text="@string/real_time_t"
            android:textAppearance="@style/real_time_t"/>
        <TextView android:id="@+id/track_your_"
            android:layout_width="301dp"
            android:layout_height="40dp"
            android:text="@string/track_your_"
            android:textAppearance="@style/track_your_"
            android:lineSpacingExtra="1sp"
            android:translationY="-0.62sp"
            android:gravity="center_horizontal|top"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <Button android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            android:background="@drawable/style_but1"/>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <TextView android:id="@+id/already_hav"
                android:layout_width="172dp"
                android:layout_height="16dp"
                android:gravity="top"
                android:lineSpacingExtra="0sp"
                android:text="@string/already_hav"
                android:textAppearance="@style/already_hav"/>
            <TextView android:id="@+id/sign_in"
                android:layout_width="43dp"
                android:layout_height="16dp"
                android:gravity="top"
                android:lineSpacingExtra="0sp"
                android:text="@string/sign_in"
                android:textAppearance="@style/sign_in"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>